# pycmor_test_data

./: README.md  pyproject.toml
src/pycmor_test_data_fesom/: __init__.py  config.py  datadir.py  datasets.py  fesom_2p6.py  fesom_2p6_registry.yaml  fesom_2p6_stub_manifest.yaml  fesom_dev.py  fesom_dev_registry.yaml  fesom_dev_stub_manifest.yaml
src/pycmor_test_data_fesom/fixtures/: config_cmip6_fesom_2p6.yaml  config_cmip6_fesom_dev.yaml  config_cmip7_fesom_2p6.yaml  config_cmip7_fesom_dev.yaml
