[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycmor-test-data-fesom"
version = "0.1.0"
description = "FESOM test datasets for pycmor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pycmor",
]

[project.entry-points."pycmor.fixtures.model_runs"]
fesom_2p6 = "pycmor_test_data_fesom.fesom_2p6:Fesom2p6ModelRun"
fesom_dev = "pycmor_test_data_fesom.fesom_dev:FesomDevModelRun"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
pycmor_test_data_fesom = ["*.yaml"]
